# aoc

./: .gitignore  README.md
src/2022/: Cargo.toml
src/2022/src/: lib.rs
src/2022/src/day1/: Cargo.toml
src/2022/src/day1/src/: main.rs
src/2022/src/day2/: Cargo.toml
src/2022/src/day2/src/: main.rs
src/2022/src/day3/: Cargo.toml
src/2022/src/day3/src/: bad.rs  main.rs  test.rs
src/2022/src/day4/: Cargo.toml
src/2022/src/day4/src/: main.rs
src/2022/src/template/: Cargo.toml
src/2022/src/template/src/: main.rs
