[package]
name = "day2"
version = "0.1.0"
edition = "2021"

[dependencies]
# Some nice QOL utilities
maplit = "1.0.2"
cute = "0.3.0"
mimalloc = { version = "0.1.17", default-features = false }

# Common parts
[dependencies.aoc]
path = "../.."

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
default = ["speedtest"]
speedtest = []