[package]
name = "day4"
version = "0.1.0"
edition = "2021"

[dependencies]
maplit = "1.0.2"
cute = "0.3.0"
itertools = "0.10.5"
mimalloc = { version = "0.1.17", default-features = false }

[dependencies.aoc]
path = "../.."

[features]
default = ["speedtest"]
speedtest = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"